--- a/Main/index.html
+++ b/Main/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	
 </head>
 <body>
 	<center><h1>This is a test program....</h1></center>
+	<img src="">
 </body>
 </html>
